fix overlap error header and body

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -31,3 +31,10 @@ body {
   background-color: #ffffff;
 }
 
+.with-z-index {
+  z-index: -1; /* phan than */
+}
+
+.with-z-index2 {
+  z-index: 1000; /* header sticky */
+}
